Homework_6/styles.css
/* General */

* {
    background-color: #FFF5D6;
}

body {
    width: 80%;
    margin: 0 auto;
}

h1 {
    font-family: 'Sacramento', cursive;
    font-size: 4em;
}

body {
    font-family: 'Josefin Slab', serif;
}

a {
    text-decoration: none;
    color: #000000;
}

a:hover,
.active {
    color: #A65C43;
    text-decoration: underline;
    text-decoration-color: #A65C43;
}

header {
    display: flex;
    justify-content: space-between;
    align-items: center;
}

.empty {
    width: 73.5px;
}

.logo {
    width: 73.5px;
}

nav {
    display: flex;
    justify-content: center;
}

nav a {
    margin-left: 55px;
    margin-right: 55px;
    font-family: 'Josefin Slab', serif;
    font-size: 2em;
}


/* Home Page */

.carousel {
    display: flex;
    overflow: hidden;
    margin-top: 70px;
    margin-bottom: 70px;
    position: relative;
    text-align: center;
    color: #A65C43;
}

.slide {
    width: 1236px;
    height: 629px;
}

.carousel-img {
    width: 1150px;
    max-height: 100%;
}

.carousel-l-arrow img,
.carousel-r-arrow img {
    background-color: transparent;
    width: 31.5px;
    height: 63px;
}

.carousel-l-arrow {
    background-color: transparent;
    position: absolute;
    left: 50px;
    top: 283px;
}

.carousel-r-arrow {
    background-color: transparent;
    position: absolute;
    right: 50px;
    top: 283px;
}

.carousel-caption {
    background-color: transparent;
    font-family: 'Sacramento', cursive;
    color: #A65C43;
    font-size: 4em;
    line-height: 1em;
    position: absolute;
    right: 120px;
    bottom: 70px;
}

/* Product Browsing */

.browsing-caption {
    font-size: 1.3em;
    width: 500px;
    text-align: center;
    margin-left: auto;
    margin-right: auto;
}

.browsing-container {
    display: flex;
    justify-content: space-between;
    flex-wrap: wrap;
}

.browsing-img {
    width: 342.5px;
    height: 250px;
    border: 1px solid black;
}

.product-name {
    font-size: 1.3em;
    font-weight: 800;
    margin-top: 10px;
    margin-bottom: 0;
}

.product-price {
    font-size: 1.3em;
    margin-top: 5px;
}

/* Product Detail */

#cart-anchor {
    height: 64px;
}

.cart-icon-container {
    position: relative;
    text-align: center;
}

.cart-number-centered {
    position: absolute;
    top: -6%;
    left: 55%;
    transform: translate(-50%, -50%);
    font-size: 2.2em;
    font-weight: 700;
    background-color: transparent;
}

#cart-hover {
    width: 227px;
    height: 150px;
    border: 1px solid black;
    border-radius: 12px;
    position: absolute;
    top: 17%;
    right: 4%;
}

.cart-hover-details {
    display: flex;
    justify-content: center;
}

.cart-hover-img {
    width: 80px;
    height: 60px;
}

.cart-hover-ps {
    margin-left: 5%;
}

#cart-hover-name,
#cart-hover-price,
#p-cart-hover-qty,
#cart-hover-qty,
#p-cart-hover-glaze,
#cart-hover-glaze {
    margin: 0;
}

#cart-hover-name {
    font-weight: 600;
}

.cart-hover-btn {
    width: 80%;
    display: block;
    margin: 0 auto;
    /* height: 67px; */
    font-family: 'Josefin Slab', serif;
    font-size: 1em;
    border-radius: 12px;
    padding: 5px;
    padding-top: 8px;
    background-color: #894E3F;
    color: #ffffff;
    border: 1px solid black;
}

.hidden {
    display: none;
}

.back {
    font-size: 1.2em;
}

.detail-container {
    display: flex;
    margin-bottom: 80px;
}

.detail-original-container {
    margin-left: 50px;
}

.detail-img {
    width: 728px;
    border: 1px solid black;
}

.detail-name {
    font-size: 3em;
    margin: 0;
}

.detail-price {
    font-size: 2em;
    margin-top: 10px;
}

.detail-original-desc {
    font-size: 1.5em;
}

/* Dropdowns */

.dropdowns {
    margin: 58px 0;
}

.detail-dropdown {
    font-size: 1.5em;
    display: block;
    margin-bottom: 20px;
}

select {
    font-family: 'Josefin Slab', serif;
    font-size: 1em;
    border-radius: 5px;
}

#quantity {
    width: 160px;
} 

#glaze {
    width: 200px;
}

.select-option {
    font-family: 'Josefin Slab', serif;
    font-size: 1em;
}

#add-to-cart {
    width: 360px;
    font-family: 'Josefin Slab', serif;
    font-size: 2em;
    border-radius: 12px;
    padding: 5px;
    padding-top: 8px;
    background-color: #894E3F;
    color: #ffffff;
    border: 1px solid black;
}

#add-to-cart:hover {
    cursor: pointer;
    background-color: #A65C43;
}

/* Cart Page */

.cart-container {
    display: flex;
    flex-wrap: wrap;
    /* flex-direction: column;
    justify-items: center; */
    margin: 0 auto;
    width: 750px;
    height: 630px;
    border: 1px solid black;
    border-radius: 12px;
    margin-bottom: 10%;;
}

.cart-items {
    display: flex;
    width: 750px;
    justify-content: center;
    padding: 86px 100px;
    border-radius: 12px;
}

.cart-img {
    width: 228px;
    height: 174px;
    border: 1px solid black;
}

.cart-items-details {
    margin: 0 50px;
}

.cart-details-name {
    font-size: 2em;
    font-weight: 600;
    margin: 0;
}

.cart-details-price {
    font-size: 1.5em;
    margin-top: 10px;
}

.cart-details-dropdown {
    font-size: 1.5em;
    display: block;
    margin-bottom: 10px;
}

#cart-quantity {
    width: 60px;
}

#cart-glaze {
    width: 100px;
}

.cart-X {
    width: 28px;
    height: 28px;
}

.cart-total {
    font-size: 2em;
    margin: 0 auto;
    align-self: center;
}

.check-out-btn-div {
    width: 100%;
    height: 67px;
}

.check-out-btn {
    width: 40%;
    display: block;
    margin: 0 auto;
    height: 67px;
    font-family: 'Josefin Slab', serif;
    font-size: 2em;
    border-radius: 12px;
    padding: 5px;
    padding-top: 8px;
    background-color: #894E3F;
    color: #ffffff;
    border: 1px solid black;
}

/* Tracking Page */

.tracking-container {
    border: 1px solid black;
    border-radius: 12px;
    margin-bottom: 50px;
}

.line {
    flex-grow: 1;
    height: 160px;
    border-bottom: 1px solid black;
}

/* Tracking - borders */
.top-tracking-container,
.progress-bar-container {
    border-bottom: 1px solid black;
}

.progress-bar-container {
    padding-left: 100px;
    padding-right: 100px;
}

.your-order-container {
    border-right: 1px solid black;
}

/* Tracking - flex */

.progress-bar-container {
    display: flex;
    justify-content: space-around;
}

.bottom-tracking-container {
    display: flex;
}

/* Tracking - top */

.est-deliv {
    font-size: 2.5em;
    font-weight: 700;
    padding-left: 35px;
}

.tracking-num {
    font-size: 2em;
    padding-left: 35px;
}

/* Tracking - progress bar */

.progress-group {
    text-align: center;
    margin-bottom: 50px;
}

.ordered-bar-icon-container {
    border: 1px solid black;
    border-radius: 50%;
    width: 120px;
    height: 120px;
    background-color: #A65C43;
    
    /* centers icon within containter */
    display: flex;
    justify-content: center;
    align-items: center;
}

.progress-bar-icon-container {
    border: 1px solid black;
    border-radius: 50%;
    width: 120px;
    height: 120px;

    /* centers icon within containter */
    display: flex;
    justify-content: center;
    align-items: center;
}

.ordered-progress-label {
    font-size: 2em;
    color: #A65C43;
}

.progress-label {
    font-size: 2em;
}

.progress-bar-icon {
    width: 70px;
    background-color: transparent;
}

/* Tracking - bottom */

.your-order-container {
    padding-left: 35px;
    border-bottom-left-radius: 12px;
    width: 50%;
}
.contact-store-container {
    padding-left: 35px;
    border-bottom-right-radius: 12px;
    width: 50%;
}

.bottom-tracking-container {
    border-bottom-left-radius: 12px;
    border-bottom-right-radius: 12px;
}

.bottom-tracking-heading {
    font-size: 2em;
}

.bottom-tracking-label {
    font-size: 1.2em;
    font-weight: 600;
}

.bottom-tracking-content {
    font-size: 1.2em;
}

